tests/ast_error_description/ast_error_description.exp
Error ----------------------------------------------------------------------------------------------- expression.js:15:1

Cannot cast `[].p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:15:1
   15| (([]: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:15:23
   15| (([]: empty): T).p as empty;
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:15:3

Cannot cast array literal to empty because empty array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:15:3
   15| (([]: empty): T).p as empty;
         ^^ [1]

References:
   expression.js:15:7
   15| (([]: empty): T).p as empty;
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:1

Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:16:1
   16| (([1]: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:16:24
   16| (([1]: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:3

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:16:3
   16| (([1]: empty): T).p as empty;
         ^^^ [1]

References:
   expression.js:16:8
   16| (([1]: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:1

Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:17:1
   17| (([1, 2, 3]: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:17:30
   17| (([1, 2, 3]: empty): T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:3

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:17:3
   17| (([1, 2, 3]: empty): T).p as empty;
         ^^^^^^^^^ [1]

References:
   expression.js:17:14
   17| (([1, 2, 3]: empty): T).p as empty;
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:1

Cannot cast `((...) => { ... }).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:18:1
   18| ((() => {}: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:18:29
   18| ((() => {}: empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:3

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:18:3
   18| ((() => {}: empty): T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:18:13
   18| ((() => {}: empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:1

Cannot cast `((...) => 42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:19:1
   19| ((() => 42: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:19:29
   19| ((() => 42: empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:3

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:19:3
   19| ((() => 42: empty): T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:19:13
   19| ((() => 42: empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:1

Cannot cast `((...) => ({...})).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:20:1
   20| ((() => ({}): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:20:31
   20| ((() => ({}): empty): T).p as empty;
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:3

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:20:3
   20| ((() => ({}): empty): T).p as empty;
         ^^^^^^^^^^ [1]

References:
   expression.js:20:15
   20| ((() => ({}): empty): T).p as empty;
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:1

Cannot cast `(a = 42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:21:1
   21| (((a = 42): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:21:29
   21| (((a = 42): empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:8

Cannot cast `a = 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:21:8
   21| (((a = 42): empty): T).p as empty;
              ^^ [1]

References:
   expression.js:21:13
   21| (((a = 42): empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:1

Cannot cast `(a >>>= 42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:22:1
   22| (((a >>>= 42): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:22:32
   22| (((a >>>= 42): empty): T).p as empty;
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:4

Cannot cast `a >>>= 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:22:4
   22| (((a >>>= 42): empty): T).p as empty;
          ^

References:
   expression.js:21:8
   21| (((a = 42): empty): T).p as empty;
              ^^ [1]
   expression.js:22:16
   22| (((a >>>= 42): empty): T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:23:1

Cannot cast `({...} = {...}).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:23:1
   23| ((({a} = {a: 42}): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:23:36
   23| ((({a} = {a: 42}): empty): T).p as empty;
                                          ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:23:10

Cannot cast `{...} = {...}` to empty because object literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:23:10
   23| ((({a} = {a: 42}): empty): T).p as empty;
                ^^^^^^^ [1]

References:
   expression.js:23:20
   23| ((({a} = {a: 42}): empty): T).p as empty;
                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:24:1

Cannot cast `([...] = [...]).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:24:1
   24| ((([a] = [42]): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:24:33
   24| ((([a] = [42]): empty): T).p as empty;
                                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:24:10

Cannot cast `[...] = [...]` to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:24:10
   24| ((([a] = [42]): empty): T).p as empty;
                ^^^^ [1]

References:
   expression.js:24:17
   24| ((([a] = [42]): empty): T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:25:1

Cannot cast `(a = a = 42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:25:1
   25| (((a = a = 42): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:25:33
   25| (((a = a = 42): empty): T).p as empty;
                                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:25:12

Cannot cast `a = a = 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:25:12
   25| (((a = a = 42): empty): T).p as empty;
                  ^^ [1]

References:
   expression.js:25:17
   25| (((a = a = 42): empty): T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:1

Cannot cast `(1 + 2).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:26:1
   26| ((1 + 2: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:26:26
   26| ((1 + 2: empty): T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:3

Cannot cast `1 + 2` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:26:3
   26| ((1 + 2: empty): T).p as empty;
         ^^^^^ [1]

References:
   expression.js:26:10
   26| ((1 + 2: empty): T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:1

Cannot cast `(1 + 2 + 3).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:27:1
   27| ((1 + 2 + 3: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:27:30
   27| ((1 + 2 + 3: empty): T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:3

Cannot cast `1 + 2 + 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:27:3
   27| ((1 + 2 + 3: empty): T).p as empty;
         ^^^^^^^^^ [1]

References:
   expression.js:27:14
   27| ((1 + 2 + 3: empty): T).p as empty;
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:1

Cannot cast `(1 - (2 + 3)).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:28:1
   28| ((1 - (2 + 3): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:28:32
   28| ((1 - (2 + 3): empty): T).p as empty;
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:3

Cannot cast `1 - (2 + 3)` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:28:3
   28| ((1 - (2 + 3): empty): T).p as empty;
         ^^^^^^^^^^^ [1]

References:
   expression.js:28:16
   28| ((1 - (2 + 3): empty): T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:1

Cannot cast `((1 + 2) * (3 + 4)).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:29:1
   29| (((1 + 2) * (3 + 4): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:29:38
   29| (((1 + 2) * (3 + 4): empty): T).p as empty;
                                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:3

Cannot cast `(1 + 2) * (3 + 4)` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:29:3
   29| (((1 + 2) * (3 + 4): empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:29:22
   29| (((1 + 2) * (3 + 4): empty): T).p as empty;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:1

Cannot cast `(1 + (2 * (3 + 4))).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:30:1
   30| ((1 + 2 * (3 + 4): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:30:36
   30| ((1 + 2 * (3 + 4): empty): T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:3

Cannot cast `1 + (2 * (3 + 4))` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:30:3
   30| ((1 + 2 * (3 + 4): empty): T).p as empty;
         ^^^^^^^^^^^^^^^ [1]

References:
   expression.js:30:20
   30| ((1 + 2 * (3 + 4): empty): T).p as empty;
                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:1

Cannot cast `f().p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:31:1
   31| ((f(): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:31:24
   31| ((f(): empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:3

Cannot cast `f()` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:31:3
   31| ((f(): empty): T).p as empty;
         ^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:31:8
   31| ((f(): empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:1

Cannot cast `f(...).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:32:1
   32| ((f(42): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:32:26
   32| ((f(42): empty): T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:3

Cannot cast `f(...)` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:32:3
   32| ((f(42): empty): T).p as empty;
         ^^^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:32:10
   32| ((f(42): empty): T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:1

Cannot cast `class { ... }.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:33:1
   33| ((class {}: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:33:29
   33| ((class {}: empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:3

Cannot cast `class { ... }` to empty because class `<<anonymous class>>` [1] is incompatible with empty [2].
[incompatible-type]

   expression.js:33:3
   33| ((class {}: empty): T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:33:13
   33| ((class {}: empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:1

Cannot cast `(1 ? 2 : 3).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:1
   34| (((1 ? 2 : 3): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:34:32
   34| (((1 ? 2 : 3): empty): T).p as empty;
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:8

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:8
   34| (((1 ? 2 : 3): empty): T).p as empty;
              ^ [1]

References:
   expression.js:34:16
   34| (((1 ? 2 : 3): empty): T).p as empty;
                      ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:34:12

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:12
   34| (((1 ? 2 : 3): empty): T).p as empty;
                  ^ [1]

References:
   expression.js:34:16
   34| (((1 ? 2 : 3): empty): T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:1

Cannot cast `((1 ? 2 : 3) ? 4 : 5).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:1
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:35:42
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
                                                ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:35:18

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:18
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
                        ^ [1]

References:
   expression.js:35:26
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
                                ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:35:22

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:22
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
                            ^ [1]

References:
   expression.js:35:26
   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:5

This condition is truthy. [constant-condition]

   35| ((((1 ? 2 : 3) ? 4 : 5): empty): T).p as empty;
           ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:36:1

Cannot cast `function () { ... }.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:36:1
   36| ((function () {}: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:36:35
   36| ((function () {}: empty): T).p as empty;
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:36:3

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:36:3
   36| ((function () {}: empty): T).p as empty;
         ^^^^^^^^^^^ [1]

References:
   expression.js:36:19
   36| ((function () {}: empty): T).p as empty;
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:1

Cannot cast `a.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:37:1
   37| ((a: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:37:22
   37| ((a: empty): T).p as empty;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:3

Cannot cast `a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:37:3
   37| ((a: empty): T).p as empty;
         ^

References:
   expression.js:25:12
   25| (((a = a = 42): empty): T).p as empty;
                  ^^ [1]
   expression.js:37:6
   37| ((a: empty): T).p as empty;
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:1

Cannot cast `import('./expression').p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:38:1
   38| ((import('./expression'): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:38:43
   38| ((import('./expression'): empty): T).p as empty;
                                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:3

Cannot cast `import('./expression')` to empty because `Promise` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:38:3
   38| ((import('./expression'): empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:38:27
   38| ((import('./expression'): empty): T).p as empty;
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:39:1

Cannot cast `<MyComponent />.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:39:1
   39| ((<MyComponent />: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:39:36
   39| ((<MyComponent />: empty): T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:39:3

Cannot cast `<MyComponent />` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:39:3
   39| ((<MyComponent />: empty): T).p as empty;
         ^^^^^^^^^^^^^^^ [1]

References:
   expression.js:39:20
   39| ((<MyComponent />: empty): T).p as empty;
                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:1

Cannot cast `<>...</>.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:40:1
   40| ((<>foo</>: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:40:29
   40| ((<>foo</>: empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:3

Cannot cast `<>...</>` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:40:3
   40| ((<>foo</>: empty): T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:40:13
   40| ((<>foo</>: empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:3

Cannot get `React.Fragment` because property `Fragment` is missing in object type [1]. [prop-missing]

   expression.js:40:3
   40| ((<>foo</>: empty): T).p as empty;
         ^^^^^^^^

References:
   expression.js:12:20
   12| declare var React: {createElement: React$CreateElement};
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:41:1

Cannot cast `'foo'.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:41:1
   41| (('foo': empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:41:26
   41| (('foo': empty): T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:41:3

Cannot cast `'foo'` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:41:3
   41| (('foo': empty): T).p as empty;
         ^^^^^ [1]

References:
   expression.js:41:10
   41| (('foo': empty): T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:1

Cannot cast `'abcdefghij...'.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:42:1
   42| (('abcdefghijklmnopqrstuvwxyz': empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:42:49
   42| (('abcdefghijklmnopqrstuvwxyz': empty): T).p as empty;
                                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:3

Cannot cast `'abcdefghij...'` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:42:3
   42| (('abcdefghijklmnopqrstuvwxyz': empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:42:33
   42| (('abcdefghijklmnopqrstuvwxyz': empty): T).p as empty;
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:1

Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:43:1
   43| ((42: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:43:23
   43| ((42: empty): T).p as empty;
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:3

Cannot cast `42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:43:3
   43| ((42: empty): T).p as empty;
         ^^ [1]

References:
   expression.js:43:7
   43| ((42: empty): T).p as empty;
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:1

Cannot cast `true.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:44:1
   44| ((true: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:44:25
   44| ((true: empty): T).p as empty;
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:3

Cannot cast `true` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:44:3
   44| ((true: empty): T).p as empty;
         ^^^^ [1]

References:
   expression.js:44:9
   44| ((true: empty): T).p as empty;
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:1

Cannot cast `false.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:45:1
   45| ((false: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:45:26
   45| ((false: empty): T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:3

Cannot cast `false` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:45:3
   45| ((false: empty): T).p as empty;
         ^^^^^ [1]

References:
   expression.js:45:10
   45| ((false: empty): T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:1

Cannot cast `null.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:46:1
   46| ((null: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:46:25
   46| ((null: empty): T).p as empty;
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:3

Cannot cast `null` to empty because null [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:46:3
   46| ((null: empty): T).p as empty;
         ^^^^ [1]

References:
   expression.js:46:9
   46| ((null: empty): T).p as empty;
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:1

Cannot cast `o.p.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:47:1
   47| ((o.p: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:47:24
   47| ((o.p: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:3

Cannot cast `o.p` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:47:3
   47| ((o.p: empty): T).p as empty;
         ^^^

References:
   expression.js:10:15
   10| const o = {p: 42};
                     ^^ [1]
   expression.js:47:8
   47| ((o.p: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:1

Cannot cast `(new f()).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:48:1
   48| ((new f(): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:48:28
   48| ((new f(): empty): T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:7

Cannot use `new` on function [1]. Only classes can be constructed. [invalid-constructor]

   expression.js:48:7
   48| ((new f(): empty): T).p as empty;
             ^

References:
   expression.js:9:11
    9| const f = (x: mixed): mixed => x;
                 ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:49:1

Cannot cast `(new f(...)).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:49:1
   49| ((new f(42): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:49:30
   49| ((new f(42): empty): T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:49:7

Cannot use `new` on function [1]. Only classes can be constructed. [invalid-constructor]

   expression.js:49:7
   49| ((new f(42): empty): T).p as empty;
             ^

References:
   expression.js:9:11
    9| const f = (x: mixed): mixed => x;
                 ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:50:1

Cannot cast `{...}.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:50:1
   50| (({}: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:50:23
   50| (({}: empty): T).p as empty;
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:50:3

Cannot cast object literal to empty because object literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:50:3
   50| (({}: empty): T).p as empty;
         ^^ [1]

References:
   expression.js:50:7
   50| (({}: empty): T).p as empty;
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:51:1

Cannot cast `3.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:51:1
   51| (((1, 2, 3): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:51:30
   51| (((1, 2, 3): empty): T).p as empty;
                                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:51:10

Cannot cast `3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:51:10
   51| (((1, 2, 3): empty): T).p as empty;
                ^ [1]

References:
   expression.js:51:14
   51| (((1, 2, 3): empty): T).p as empty;
                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:52:17

Cannot use `class { ... }` [1] as a superclass. Only variables and member expressions may be extended [invalid-extends]

                       v------
   52| class X extends class {
   53|   m() {}
   54| } {
       ^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:56:5

Cannot cast `super.m.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:56:5
   56|     ((super.m: empty): T).p as empty;
           ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:56:32
   56|     ((super.m: empty): T).p as empty;
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:1

Cannot cast `f`...`.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:59:1
   59| ((f`foobar`: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:59:30
   59| ((f`foobar`: empty): T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:3

Cannot cast template string to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:59:3
   59| ((f`foobar`: empty): T).p as empty;
         ^^^^^^^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:59:14
   59| ((f`foobar`: empty): T).p as empty;
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:1

Cannot cast ``...`.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:60:1
   60| ((`foobar`: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:60:29
   60| ((`foobar`: empty): T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:3

Cannot cast template string to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:60:3
   60| ((`foobar`: empty): T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:60:13
   60| ((`foobar`: empty): T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:62:3

Cannot cast `this.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:62:3
   62|   ((this: empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:62:27
   62|   ((this: empty): T).p as empty;
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:62:5

Cannot cast `this` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:62:5
   62|   ((this: empty): T).p as empty;
           ^^^^

References:
   expression.js:61:18
   61| (function (this: number) {
                        ^^^^^^ [1]
   expression.js:62:11
   62|   ((this: empty): T).p as empty;
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:1

Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:64:1
   64| (((42: string): empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:64:33
   64| (((42: string): empty): T).p as empty;
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:8

Cannot cast `42` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:64:8
   64| (((42: string): empty): T).p as empty;
              ^^^^^^ [1]

References:
   expression.js:64:17
   64| (((42: string): empty): T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:4

Cannot cast `42` to string because number [1] is incompatible with string [2]. [incompatible-type]

   expression.js:64:4
   64| (((42: string): empty): T).p as empty;
          ^^ [1]

References:
   expression.js:64:8
   64| (((42: string): empty): T).p as empty;
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:1

Cannot cast `(-42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:65:1
   65| ((-42: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:65:24
   65| ((-42: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:3

Cannot cast `-42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:65:3
   65| ((-42: empty): T).p as empty;
         ^^^ [1]

References:
   expression.js:65:8
   65| ((-42: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:1

Cannot cast `(!42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:66:1
   66| ((!42: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:66:24
   66| ((!42: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:3

Cannot cast `!42` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:66:3
   66| ((!42: empty): T).p as empty;
         ^^^ [1]

References:
   expression.js:66:8
   66| ((!42: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:1

Cannot cast `(++a).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:67:1
   67| ((++a: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:67:24
   67| ((++a: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:3

Cannot cast `++a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:67:3
   67| ((++a: empty): T).p as empty;
         ^^^ [1]

References:
   expression.js:67:8
   67| ((++a: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:1

Cannot cast `(a++).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:68:1
   68| ((a++: empty): T).p as empty;
       ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:68:24
   68| ((a++: empty): T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:3

Cannot cast `a++` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:68:3
   68| ((a++: empty): T).p as empty;
         ^^^ [1]

References:
   expression.js:68:8
   68| ((a++: empty): T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:3

Cannot cast `yield.p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:70:3
   70|   ((yield: empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:70:28
   70|   ((yield: empty): T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:5

Cannot cast `yield` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:70:5
   70|   ((yield: empty): T).p as empty;
           ^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:70:12
   70|   ((yield: empty): T).p as empty;
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:3

Cannot cast `(yield 42).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:71:3
   71|   ((yield 42: empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:71:31
   71|   ((yield 42: empty): T).p as empty;
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:5

Cannot cast `yield 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:71:5
   71|   ((yield 42: empty): T).p as empty;
           ^^^^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:71:15
   71|   ((yield 42: empty): T).p as empty;
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:3

Cannot cast `(yield* g1()).p` to empty because mixed [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:74:3
   74|   ((yield* g1(): empty): T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:74:34
   74|   ((yield* g1(): empty): T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:5

Cannot cast `yield* g1()` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:74:5
   74|   ((yield* g1(): empty): T).p as empty;
           ^^^^^^^^^^^

References:
   expression.js:69:42
   69| function* g1(): Generator<number | void, void, number> {
                                                ^^^^ [1]
   expression.js:74:18
   74|   ((yield* g1(): empty): T).p as empty;
                        ^^^^^ [2]



Found 103 errors
